@@ -1,10 +1,21 @@
 #!/usr/bin/env bash
 
-if [[ -z "${SPELLSOURCE_APPLICATION}" ]]; then
-  APPLICATION="Clustered"
-else
-  APPLICATION="${SPELLSOURCE_APPLICATION}"
+# This file executes the shadow / fat jar of the server on its docker image, using PORT=80 by default.
+
+if [[ -z "${SPELLSOURCE_APPLICATION+x}" ]]; then
+  SPELLSOURCE_APPLICATION="Clustered"
+fi
+
+if [[ -z "${SPELLSOURCE_VERSION+x}" ]]; then
+  SPELLSOURCE_VERSION=0.8.21
 fi
 
 # Executes the fat jar of the network server using the Embedded application by default
-java -javaagent:/data/quasar-core-0.7.9-jdk8.jar=mb -cp /data/net-1.3.0-all.jar com.hiddenswitch.spellsource.applications.$APPLICATION >>/var/log/java.log 2>&1
+java --add-modules java.se \
+  --add-exports java.base/jdk.internal.ref=ALL-UNNAMED \
+  --add-opens java.base/java.lang=ALL-UNNAMED \
+  --add-opens java.base/java.nio=ALL-UNNAMED \
+  --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
+  --add-opens java.management/sun.management=ALL-UNNAMED \
+  --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED \
+  -cp /data/net-${SPELLSOURCE_VERSION}.jar com.hiddenswitch.spellsource.applications.${SPELLSOURCE_APPLICATION}
